helm/istio/virtualservice.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: app-virtualservice
spec:
  hosts:
  - "*"
  gateways:
  - app-gateway
  http:
  # Разрешенные маршруты
  - match:
    - uri:
        exact: /
    route:
    - destination:
        host: app-service.default.svc.cluster.local
        port:
          number: 80
  
  - match:
    - uri:
        exact: /status
    route:
    - destination:
        host: app-service.default.svc.cluster.local
        port:
          number: 80
  
  - match:
    - uri:
        exact: /log
    fault:
      delay:
        percentage:
          value: 100
        fixedDelay: 2s
    route:
    - destination:
        host: app-service.default.svc.cluster.local
        port:
          number: 80
    timeout: 1s
    retries:
      attempts: 2
      perTryTimeout: 0.5s
  
  - match:
    - uri:
        exact: /logs
    route:
    - destination:
        host: app-service.default.svc.cluster.local
        port:
          number: 80
  
  # Все остальные маршруты
  - match:
    - uri:
        prefix: /
    directResponse:
      status: 404
      body:
        string: "Not Found"
